2011-11-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* target.make: Don't use -undefined dynamic_lookup when linking
	executables on OS X. This fixes some false positive results for
	library function tests in configure and also prevents programs
	crashing at load time due to unresolved references.

2011-10-19  Richard Frith-Macdonald <rfm@gnu.org>

	* target.make: The -pthread compiler flag is broken on windows ...
	don't use it there.

2011-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* FilesystemLayouts/standalone: first draft at a layout to put
	everything in one directory for easy deployment of relocatable,
	standalone packages.
	Use --with-layout=standalone

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* target.make: Use -pthread for compilation on all platforms.
	While it's not always needed, for the gcc-4.? series of compilers
	it should always work to turn on preprocessor defines and any other
	options needed for threaded code (and we have to assume all code we
	build may be used in a threaded environment).
	This gives gcc (or clang, which copies gcc) the responsibility for
	doing this work.

2011-09-29  Adam Fedor  <fedor@gnu.org>

	* Instance/Documentation/texi.make: Install html chapters as well

2011-06-29  David Chisnall <theraven@gna.org>

	* Instance/framework.make (DUMMY_FRAMEWORK_FILE): Make -make not
	  generate a file that contains an implicit cast that is not
	  permitted by ARC.

2011-06-27  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fix for a race condition during parallel builds of tools with
	resources.
	* Master/tool.make (MAYBE_GNUSTEP_BUILD_DIR_RESOURCES): New.
	($(GNUSTEP_BUILD_DIR)/Resources): New rule.
	(internal-all): Depend on MAYBE_GNUSTEP_BUILD_DIR_RESOURCES.

2011-06-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Instance/framework.make (FRAMEWORK_LIBRARY_FILE): Get names of
	versioned dynamic libraries in frameworks right under Darwin/OS X.

2011-06-07  Nicola Pero  <nicola.pero@meta-innovation.com>
	